--- a/LanguageTrainer.Paging/LanguageTrainer.Paging.csproj
+++ b/LanguageTrainer.Paging/LanguageTrainer.Paging.csproj
@@ -100,6 +100,9 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WPFLocalizeExtension">
+      <HintPath>..\..\Common\bin\Debug\WPFLocalizeExtension.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constans.cs" />
