--- a/LanguageTrainer.Interfaces/LanguageTrainer.Interfaces.csproj
+++ b/LanguageTrainer.Interfaces/LanguageTrainer.Interfaces.csproj
@@ -76,7 +76,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MK.Data">
-      <HintPath>..\..\Common\bin\Debug\MK.Data.dll</HintPath>
+      <HintPath>..\..\Common\bin\$(Configuration)\MK.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
