--- a/LanguageTrainer.Logic/LanguageTrainer.Logic.csproj
+++ b/LanguageTrainer.Logic/LanguageTrainer.Logic.csproj
@@ -84,22 +84,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MK.Data">
-      <HintPath>..\..\Common\bin\Debug\MK.Data.dll</HintPath>
+      <HintPath>..\..\Common\bin\$(Configuration)\MK.Data.dll</HintPath>
     </Reference>
     <Reference Include="MK.Data.Xml">
-      <HintPath>..\..\Common\bin\Debug\MK.Data.Xml.dll</HintPath>
+      <HintPath>..\..\Common\bin\$(Configuration)\MK.Data.Xml.dll</HintPath>
     </Reference>
     <Reference Include="MK.Logging">
-      <HintPath>..\..\Common\bin\Debug\MK.Logging.dll</HintPath>
+      <HintPath>..\..\Common\bin\$(Configuration)\MK.Logging.dll</HintPath>
     </Reference>
     <Reference Include="MK.MyMath">
-      <HintPath>..\..\Common\bin\Debug\MK.MyMath.dll</HintPath>
+      <HintPath>..\..\Common\bin\$(Configuration)\MK.MyMath.dll</HintPath>
     </Reference>
     <Reference Include="MK.UI.WPF">
-      <HintPath>..\..\Common\bin\Debug\MK.UI.WPF.dll</HintPath>
+      <HintPath>..\..\Common\bin\$(Configuration)\MK.UI.WPF.dll</HintPath>
     </Reference>
     <Reference Include="MK.Utilities">
-      <HintPath>..\..\Common\bin\Debug\MK.Utilities.dll</HintPath>
+      <HintPath>..\..\Common\bin\$(Configuration)\MK.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
