--- a/LanguageTrainer.Paging/LanguageTrainer.Paging.csproj
+++ b/LanguageTrainer.Paging/LanguageTrainer.Paging.csproj
@@ -81,11 +81,11 @@
   <ItemGroup>
     <Reference Include="MK.UI.WPF, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Common\bin\Debug\MK.UI.WPF.dll</HintPath>
+      <HintPath>..\..\Common\bin\$(Configuration)\MK.UI.WPF.dll</HintPath>
     </Reference>
     <Reference Include="MK.Utilities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Common\bin\Debug\MK.Utilities.dll</HintPath>
+      <HintPath>..\..\Common\bin\$(Configuration)\MK.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -101,7 +101,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="WPFLocalizeExtension">
-      <HintPath>..\..\Common\bin\Debug\WPFLocalizeExtension.dll</HintPath>
+      <HintPath>..\..\Common\bin\$(Configuration)\WPFLocalizeExtension.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
