--- a/LanguageTrainer.Logic/LanguageTrainer.Logic.csproj
+++ b/LanguageTrainer.Logic/LanguageTrainer.Logic.csproj
@@ -83,24 +83,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MK.Data">
-      <HintPath>..\..\Common\bin\$(Configuration)\MK.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="MK.Data.Xml">
-      <HintPath>..\..\Common\bin\$(Configuration)\MK.Data.Xml.dll</HintPath>
-    </Reference>
-    <Reference Include="MK.Logging">
-      <HintPath>..\..\Common\bin\$(Configuration)\MK.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="MK.MyMath">
-      <HintPath>..\..\Common\bin\$(Configuration)\MK.MyMath.dll</HintPath>
-    </Reference>
-    <Reference Include="MK.UI.WPF">
-      <HintPath>..\..\Common\bin\$(Configuration)\MK.UI.WPF.dll</HintPath>
-    </Reference>
-    <Reference Include="MK.Utilities">
-      <HintPath>..\..\Common\bin\$(Configuration)\MK.Utilities.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -139,6 +121,30 @@
     <Compile Include="Translator\TranslatorContainer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common\MK.Data.Xml\MK.Data.Xml.csproj">
+      <Project>{b50bb87a-eea1-452b-8393-037e06c4bfde}</Project>
+      <Name>MK.Data.Xml</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\MK.Data\MK.Data.csproj">
+      <Project>{6dcc7032-3bae-4fe6-b315-55f3aa424d5f}</Project>
+      <Name>MK.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\MK.Logging\MK.Logging.csproj">
+      <Project>{865745f2-b7b2-4940-b99d-7239757ff8d2}</Project>
+      <Name>MK.Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\MK.MyMath\MK.MyMath.csproj">
+      <Project>{e5e720ad-e1e5-4ce2-8fd4-3fff0d0511f7}</Project>
+      <Name>MK.MyMath</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\MK.UI.WPF\MK.UI.WPF.csproj">
+      <Project>{a623a7d2-c055-435d-bcfd-3e76d9389f90}</Project>
+      <Name>MK.UI.WPF</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\MK.Utilities\MK.Utilities.csproj">
+      <Project>{a2c7083e-bfc4-4f7b-99bc-b0c437924484}</Project>
+      <Name>MK.Utilities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LanguageTrainer.Common\LanguageTrainer.Common.csproj">
       <Project>{EE321BE8-C686-4784-9442-3AFCAC17B3FA}</Project>
       <Name>LanguageTrainer.Common</Name>
@@ -167,7 +173,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
