Squashed 'Common/' changes from 7ee54cb..a008e41
a008e41 ..\packages -> $(SolutionDir)packages

git-subtree-dir: Common
git-subtree-split: a008e41927c9fff6b2925af43cf92a2233484a9f

--- a/MK.Live/MK.Live.csproj
+++ b/MK.Live/MK.Live.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Live, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\LiveSDK.5.6.3\lib\net45\Microsoft.Live.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\LiveSDK.5.6.3\lib\net45\Microsoft.Live.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -84,3 +84,4 @@
   </Target>
   -->
 </Project>
+
