--- a/LanguageTrainer/LanguageTrainer.csproj
+++ b/LanguageTrainer/LanguageTrainer.csproj
@@ -61,7 +61,7 @@
     <ManifestKeyFile>LanguageTrainer_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>false</SignManifests>
