--- a/MK.Logging/project.json
+++ b/MK.Logging/project.json
@@ -1,12 +1,12 @@
 ﻿{
   "dependencies": {
-    "EnterpriseLibrary.Common": "6.0.1304.0"
+    "EnterpriseLibrary.Common": "6.0.1304.0",
+    "EnterpriseLibrary.Logging": "6.0.1304.0"
   },
   "frameworks": {
     "net46": {}
   },
-  "supports": {
-  },
+  "supports": {},
   "runtimes": {
     "win": {}
   }
